@@ -1,3 +1,7 @@
+2001-05-19  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* throw.c (scm_lazy_catch): Slight docstring clarification.
+
 2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* throw.c: Lazy-catch handlers are no longer allowed to return.
